[gd_scene load_steps=3 format=3 uid="uid://cociwdpux7nkk"]

[ext_resource type="Script" path="res://scripts/bol.gd" id="1_gy0eh"]
[ext_resource type="Texture2D" uid="uid://b30eo3owxyaxd" path="res://assets/Capture_d_Ã©cran_2025-02-24_125335-removebg-preview.png" id="2_pg0fv"]

[node name="Bol" type="Node2D"]
script = ExtResource("1_gy0eh")

[node name="ButtonBolMineralise" type="Button" parent="."]
offset_left = 1035.0
offset_top = 402.0
offset_right = 1248.0
offset_bottom = 464.0
scale = Vector2(0.405, 0.405)
theme_override_font_sizes/font_size = 20
text = "Eau mineralise"

[node name="ButtonBolDeminiralise" type="Button" parent="."]
offset_left = 851.0
offset_top = 404.0
offset_right = 1031.0
offset_bottom = 457.0
scale = Vector2(0.405, 0.405)
theme_override_font_sizes/font_size = 20
text = "Eau deminiralise"

[node name="SpriteBol" type="Sprite2D" parent="."]
position = Vector2(986, 503)
scale = Vector2(0.425343, 0.426505)
texture = ExtResource("2_pg0fv")

[node name="LabelEau" type="Label" parent="."]
offset_left = 847.0
offset_top = 354.0
offset_right = 1064.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 23
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 916.0
offset_top = 609.0
offset_right = 1226.0
offset_bottom = 659.0
scale = Vector2(0.405, 0.405)
theme_override_font_sizes/font_size = 30
text = "Arrosage"

[connection signal="pressed" from="ButtonBolMineralise" to="." method="_on_button_bol_mineralise_pressed"]
[connection signal="pressed" from="ButtonBolDeminiralise" to="." method="_on_button_bol_deminiralise_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
